Bug 520371 - Opening a .flatpakrepo file in KDE Discover causes the application to crash.
Summary: Opening a .flatpakrepo file in KDE Discover causes the application to crash.
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: 6.6.5
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-05-18 23:02 UTC by Arthur Marques
Modified: 2026-05-22 14:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Dr Konqui (36.93 KB, text/plain)
2026-05-18 23:02 UTC, Arthur Marques
Details
GDB log (29.26 KB, text/plain)
2026-05-18 23:02 UTC, Arthur Marques
Details
video on how to reproduce (1.02 MB, video/mp4)
2026-05-18 23:03 UTC, Arthur Marques
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arthur Marques 2026-05-18 23:02:03 UTC
Created attachment 192432 [details]
Dr Konqui

STEPS TO REPRODUCE
1. Open a .flatpakrepo file using Dolphin
2. KDE Discover starts processing the file
3. After a short time, Discover crashes

OBSERVED RESULT
Discover closes after a period of inactivity.

EXPECTED RESULT
The file should be opened correctly, or an error message should be displayed if unsupported.

SOFTWARE VERSIONS:
Discover: 6.6.5
Operating System: KDE neon User Edition
KDE Plasma Version: 6.6.5
KDE Frameworks Version: 6.26.0
Qt Version: 6.10.2
Kernel Version: 6.17.0-29-generic (64-bit.
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 7 7730U with Radeon Graphics
Memory: 7.9 GiB of RAM (7.7 GiB usable.
Graphics Processor: llvmpipe
Manufacturer: QEMU
Product Name: Standard PC (Q35 + ICH9, 2009.
System Version: pc-q35-10.2

ADDITIONAL INFORMATION
Created as requested in report 470054: https://bugs.kde.org/show_bug.cgi?id=470054
Comment 1 Arthur Marques 2026-05-18 23:02:37 UTC
Created attachment 192433 [details]
GDB log
Comment 2 Arthur Marques 2026-05-18 23:03:22 UTC
Created attachment 192434 [details]
video on how to reproduce
Comment 3 Bug Janitor Service 2026-05-19 11:33:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/1331
Comment 4 Tobias Fella 2026-05-21 09:15:53 UTC
Git commit ce3ac2d16ccbbeccb22ec8b85a286a42a9b98aa4 by Tobias Fella, on behalf of Tobias Fella.
Committed on 21/05/2026 at 09:15.
Pushed by tfella into branch 'master'.

Don't try to load version and size of a flatpak repo

When adding a flatpak repo from a file, discover would try to read the version and size,
which would assert lower down in the stack because that doesn't make sense.

Also hide the relevant fields in the UI.

M  +5    -2    discover/qml/ApplicationPageFullComponent.qml
M  +7    -0    libdiscover/backends/FlatpakBackend/FlatpakResource.cpp

https://invent.kde.org/plasma/discover/-/commit/ce3ac2d16ccbbeccb22ec8b85a286a42a9b98aa4