Don't try to load version and size of a flatpak repo

When adding a flatpak repo from a file, discover would try to read the version and size,
which would assert lower down in the stack because that doesn't make sense.

Also hide the relevant fields in the UI.

BUG: 520371